--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,12 @@
   "author": "Aakash Pal Akhil Raj",
   "license": "ISC",
   "devDependencies": {
-      "nodemon": "^3.1.7"
-    }
+    "nodemon": "^3.1.7",
+    "prettier": "^3.3.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "mongoose": "^8.7.1"
+  }
 }
